--- a/cloudpano/css/cloudpano.webflow.css
+++ b/cloudpano/css/cloudpano.webflow.css
@@ -635,7 +635,7 @@
 
 .image-6 {
   position: absolute;
-  left: 11.4%;
+  left: 11.3%;
   top: 6.3%;
   z-index: 1;
   display: block;
@@ -1369,12 +1369,15 @@
 
 .screen {
   position: absolute;
-  left: 11.4%;
+  left: 11.3%;
   top: 6.3%;
   z-index: 1;
   width: 100%;
   height: 87.5%;
   max-width: 77.5%;
+  background-image: url('../images/topimage.png');
+  background-position: 0px 0px;
+  background-size: 677px;
 }
 
 @media (max-width: 991px) {
@@ -1548,7 +1551,7 @@
   }
   .image-6 {
     position: absolute;
-    left: 11.4%;
+    left: 11.3%;
     display: block;
     max-width: 77.2%;
   }
