--- a/css/martinhudobivnik.webflow.css
+++ b/css/martinhudobivnik.webflow.css
@@ -449,7 +449,7 @@ img {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  background-image: url('../images/Image1_1.png');
+  background-image: url('../images/Image1.png');
   background-position: 50% 50%;
   background-size: cover;
   background-repeat: no-repeat;
@@ -685,6 +685,7 @@ img {
   }
   .s-image-one {
     height: auto;
+    max-height: 300px;
     margin-left: 35px;
     -webkit-box-flex: 1;
     -webkit-flex: 1;
@@ -916,7 +917,8 @@ img {
   .div-block-6 {
     position: relative;
     display: block;
-    height: 100%;
+    height: auto;
+    max-height: 300px;
     margin-right: 35px;
     margin-bottom: 35px;
     margin-left: 35px;
@@ -938,6 +940,8 @@ img {
   }
   .div-block-7 {
     display: block;
+    height: auto;
+    max-height: 300px;
     margin-right: 35px;
     margin-bottom: 35px;
     margin-left: 35px;
@@ -1033,13 +1037,16 @@ img {
     display: inline;
   }
   .div-block-6 {
+    height: auto;
+    max-height: 300px;
     background-image: url('../images/first.jpg');
     background-position: 0px 0px;
     background-size: 505px;
     background-attachment: fixed;
   }
   .div-block-7 {
-    height: 100%;
+    height: auto;
+    max-height: 300px;
     margin-right: 35px;
     margin-bottom: 35px;
     margin-left: 35px;
